<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/calcPadding"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/display_text"
        android:textSize="@dimen/resTextSize"
        android:gravity="right"
        style="?attr/resultTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/spase"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceHeight"
        app:layout_constraintStart_toStartOf="@id/display_text"
        app:layout_constraintTop_toBottomOf="@id/display_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_c"
        app:layout_constraintStart_toStartOf="@+id/spase"
        app:layout_constraintEnd_toStartOf="@+id/key_sqr"
        app:layout_constraintTop_toBottomOf="@id/spase" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_sqr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_sqr"
        app:layout_constraintStart_toEndOf="@+id/key_c"
        app:layout_constraintEnd_toStartOf="@+id/key_pn"
        app:layout_constraintTop_toBottomOf="@id/spase" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_pn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_pn"
        app:layout_constraintStart_toEndOf="@+id/key_sqr"
        app:layout_constraintEnd_toStartOf="@+id/key_bckp"
        app:layout_constraintTop_toBottomOf="@id/spase" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_bckp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_bckp"
        app:layout_constraintStart_toEndOf="@+id/key_pn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spase" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintStart_toStartOf="@+id/key_c"
        app:layout_constraintEnd_toStartOf="@+id/key_2"
        app:layout_constraintTop_toBottomOf="@+id/key_c" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@+id/key_3"
        app:layout_constraintTop_toTopOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_div"
        app:layout_constraintTop_toTopOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_div"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toTopOf="@id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintStart_toStartOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintTop_toTopOf="@id/key_4" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_mltp"
        app:layout_constraintTop_toTopOf="@id/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_mltp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_mltp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toTopOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintTop_toTopOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_sub"
        app:layout_constraintTop_toTopOf="@id/key_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toTopOf="@id/key_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        app:layout_constraintStart_toStartOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_calc"
        app:layout_constraintTop_toTopOf="@id/key_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_calc"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_add"
        app:layout_constraintTop_toTopOf="@id/key_dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_calc"
        app:layout_constraintTop_toTopOf="@id/key_calc" />

</androidx.constraintlayout.widget.ConstraintLayout>